// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkOrButton render a button when "to" is undefined 1`] = `
<DocumentFragment>
  <a
    class="anchorLink nav-link"
    href=""
    role="button"
    tabindex="0"
  >
    foo
  </a>
</DocumentFragment>
`;

exports[`LinkOrButton render a link when "to" is set 1`] = `
<DocumentFragment>
  <a
    class="anchorLink nav-link"
    href="http://example.com"
    tabindex="0"
  >
    foo
  </a>
</DocumentFragment>
`;
